added linkedin jobs integration
